--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: "TextLog"
-description: "Minimalist Jekyll theme for documentation"
+title: "Goodot"
+description: "One possibly interesting blog"
 baseurl: "" # begin with /repo-name if use as project, else leave empty for gh-pages
 url: "" # default is empty
-author: "John Doe"
+author: "Goderdzi Jobadze"
 
 # Build settings
 kramdown:
