--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Goodot"
-description: "One possibly interesting blog"
+description: "Personal Website"
 baseurl: "" # begin with /repo-name if use as project, else leave empty for gh-pages
 url: "" # default is empty
 author: "Goderdzi Jobadze"
